--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     
 }
 body{
-    background-image:url("/travel.png");
+    background-image:url("https://suchitkhadge.github.io/exquisitetravel/travel.png");
     min-width: 100%;
     background-position: center;
     background-size: cover;
